# Kata-FizzBuzz-Pruebas

./: FizzBuzz.cabal  myfirstapp.cabal
FizzBuzz/: Setup.hs  cabal.sandbox.config
FizzBuzz/app/: Main.hs
FizzBuzz/dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
FizzBuzz/src/: FizzBuzz.hs
FizzBuzz/test/: Main.hs
dist-newstyle/cache/: compiler  config
dist-newstyle/packagedb/ghc-8.6.5/: FizzBuzz-0.1.0.0-inplace.conf  package.cache
src.save0/: FizzBuzz.hs
test/: Main.hs
test.save0/: Tests.hs
