name:                FizzBuzz
version:             0.1.0.0
cabal-version:       >=1.24
build-type:          Simple

library
  exposed-modules:     FizzBuzz
  hs-source-dirs:      src
  build-depends:       base >=4.7 && <5
  default-language:    Haskell2010

executable fizzbuzz-exe
  main-is:             Main.hs
  hs-source-dirs:      app
  build-depends:       base >=4.7 && <5
                     , FizzBuzz
  default-language:    Haskell2010

test-suite test-fizzbuzz
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base >=4.7 && <5
                     , FizzBuzz
                     , QuickCheck
                     , HUnit
  default-language:    Haskell2010
